test/kubernetes/e2e/features/validation/testdata/switch-vs/invalid-vs.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: i-am-invalid
spec:
  virtualHost:
    domains:
      - 'invalid.com'
    routes:
      - routeAction:
          options:
            prefixRewrite: matcher and action are missing
        name: route
